Add webpack-cli for heroku

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/cnguyen714/ceaseless-battle#readme",
   "dependencies": {
-    "webpack": "^4.36.1"
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6"
   }
 }
