--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch --mode=development",
-    "postinstall": "webpack",
-    "deploy": "gh-pages -d build"
+    "postinstall": "webpack"
   },
   "engines": {
     "node": "10.13.0",
@@ -26,8 +25,5 @@
   "dependencies": {
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6"
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
   }
 }
